--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1140,17 +1140,45 @@ img {
   .login-content h3 {
     margin-bottom: 30px; }
   .login-content .form-group {
-    text-align: left; }
+    text-align: left; 
+    margin-right: 70px;
+    }
   .login-content .form-control {
+  	
     width: 100%;
     height: 50px;
     border: 1px solid #000000;
     font-size: 12px;
     font-style: italic;
     padding: 0 20px;
-    border-radius: 0; }
+    border-radius: 0; 
+    }
+    
+  .login-content .form-controlasd {
+   margin-right: 10px;
+   }
+  .login-content .form-year {
+   height: 50px;
+   width: 13%;
+   font-size: 15px;
+   }
+  .login-content .form-birth {
+   height: 50px;
+   width: 10%;
+   font-size: 15px;
+   }
+  .login-content .form-day {
+   height: 50px;
+   width: 10%;
+   font-size: 15px;
+   }         
+  .login-content .spacing{
+    display: inline-block;
+    margin-right: 40px;  
+  } 
     .login-content .form-control:focus {
-      box-shadow: none; }
+      box-shadow: none; 
+      }
 
 /* :: 13.0 Services Area CSS */
 .single-service-area .icon {
