--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1157,6 +1157,9 @@ img {
   .login-content .form-controlasd {
    margin-right: 10px;
    }
+  .login-content .form-controlgen {
+   margin-right: 10px;
+   }   
   .login-content .form-year {
    height: 50px;
    width: 13%;
