2023-08-03 양진호 커밋16 1. 장바구니 페이지 사이드 메뉴 생성했지만 삭제 2. 그로 인한 CSS를 수정했지만 복원 3. mypage 생성 중

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -273,7 +273,14 @@ img {
   background-color: transparent !important; }
 
 .bg-gray {
-  background-color: #f5f9fa; }
+	width: 100%;
+  	/*background-color: rgb(111,167,235);*/ 
+  	background-color: #f5f9fa;
+  	margin-top: 5px;
+  	margin-right: 20px;
+	border: 1px solid #d8d8d8;
+  	}
+   	
 
 .font-bold {
   font-weight: 700; }
@@ -652,12 +659,12 @@ img {
     -webkit-transform: scale(1);
     transform: scale(1); } }
 /* :: 6.0 Buy Now Area CSS */
-.oneMusic-buy-now-area.has-fluid {
-  padding-left: 4%;
-  padding-right: 4%;
-  position: relative;
-  z-index: 1; }
-
+	.oneMusic-buy-now-area.has-fluid {
+	padding-left: 15%;
+	padding-right: 4%;
+	position: relative;
+	z-index: 1; 
+	}
 /* :: 7.0 Events Area CSS */
 .single-event-area {
   position: relative;
