2023-08-08 양진호 커밋28 관리자 페이지 중 음원 관리 CSS 수정 완

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1203,22 +1203,24 @@ img {
 	.new-hits-area .single-new-item .audioplayer-volume,
 	.new-hits-area .single-new-item .audioplayer-bar {
       display: none; }
-      
-	.member-content {
+      /*1번*/
+	.music-content {
  	 -webkit-transition-duration: 500ms;
  	 transition-duration: 500ms;
   	position: relative;
  	 z-index: 1;
  	 background-color: #f5f9fa;
  	 border: 1px solid #d8d8d8;
- 	 padding: 50px 20px;
+ 	 padding: 50px 60px;
  	 box-shadow: 0 2px 70px 0 rgba(0, 0, 0, 0.15);
- 	 text-align: center; 
+ 	 text-align: center;
+ 	 width: 970px; 
+ 	 margin-left: 40px;
   	}
   	.admin-container{
-  	width: 400%;
+  	width: 80%;
 	text-align: center;
-	margin-right : 900px;
+	margin-right : 50px;
   	}
 	.member-manage-form table {
 	text-align : center;
@@ -1230,11 +1232,12 @@ img {
 	text-align : center;
  	margin-left: -60px; 
  	border-collapse : collapse;
- 	width: 110%; 
+ 	width: 950px; 
 	}	
   	.music-container{
+  	width: 1950px;
 	text-align: center;
-	margin-left: -2000px;
+	margin-left: -250px;
   	}	
 	.music-manage-form button {
   	padding: 10px 20px; 
@@ -1254,7 +1257,7 @@ img {
  	background-color : #f5f9fa;
 	border: 1px solid #d8d8d8;
 	margin-top : 100px;
-	margin-left : 10%;
+	margin-left : 80px;
 	width : 10%;
 	float : left;
 	min-height : 200px;
@@ -1401,6 +1404,7 @@ img {
 	margin-left: -205px;
 	} 
 	
+	/*2번*/
 	.member-content {
  	 -webkit-transition-duration: 500ms;
  	 transition-duration: 500ms;
@@ -1411,7 +1415,6 @@ img {
  	 padding: 50px 30px;
  	 box-shadow: 0 2px 70px 0 rgba(0, 0, 0, 0.15);
  	 text-align: center;
- 	 margin-right: 80%;
  	 width: 140%; 
   	}
   	.music-list-container{
