2023-08-09 양진호 커밋30 음원 DB의 변경에 따른 서블릿 변경 앨범 사진만 등록하는 것으로 변경. 이에 따라 관련된 페이지의 주소 변경

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1395,13 +1395,13 @@ img {
  	/*background-color: #f5f9fa;
  	border: 1px solid #d8d8d8;*/
 	margin-top : 50px;
-	width : 58%;
+	width : 650px;
 	float : left;
 	min-height : 200px;
 	border-radius: 8px;
 	box-sizing: border-box;
 	padding-right: 100px;
-	margin-left: -205px;
+	margin-left: -50px;
 	} 
 	
 	/*2번*/
