2023-08-09 양진호 커밋32 현성님께서 말씀하셨던 앨범 이미지에 재생 버튼을 만들어서 클릭 시, 음원이 재생할 수 있도록 만들었습니다.(해당 기능은 CSS에 실험2를 검색하면 볼 수 있습니다.) 테스트를 하기위해 main.jsp에 BTS의 Butter만 만들었습니다. 관리자 페이지에서 회원, 관리자, 아티스트를 탈퇴시킬 수 있는 기능 추가 일부 페이지 링크 및 이름 변경

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -931,7 +931,31 @@ img {
       text-transform: uppercase; }
     .single-album-area .album-info p {
       margin-bottom: 0; }
-
+ /*실험2 START*/
+ 	.single-album-area .audioplayer{
+ 	background: transparent;
+ 	border: none;
+ 	width: auto;
+ 	margin: 0;
+ 	padding: 0; 
+ 	}
+	.single-album-area .audioplayer-playing .audioplayer-playpause,
+	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause:hover,
+	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause {
+	background: #d6d6d6;
+	margin: 0 auto;
+	margin-top: -550px;
+	opacity: 0.5; 
+	}
+	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause a {
+	border-left: 12px solid #fff}
+	.single-album-area .audioplayer-time,
+	.single-album-area .audioplayer-volume,
+	.single-album-area .audioplayer-bar {
+	display: none }
+	
+ /*실험2 END*/	
+	
 .albums-slideshow {
   position: relative;
   z-index: 1; }
@@ -1193,6 +1217,7 @@ img {
       border: none;
       border-radius: 0;
       background: transparent; }
+      /*실험*/
     .new-hits-area .single-new-item .audioplayer-playing .audioplayer-playpause,
     .new-hits-area .single-new-item .audioplayer:not(.audioplayer-playing) .audioplayer-playpause:hover,
     .new-hits-area .single-new-item .audioplayer:not(.audioplayer-playing) .audioplayer-playpause {
@@ -1237,7 +1262,8 @@ img {
   	.music-container{
   	width: 1950px;
 	text-align: center;
-	margin-left: -250px;
+	margin-left: -500px;
+	padding-left: 250px;
   	}	
 	.music-manage-form button {
   	padding: 10px 20px; 
