2023-08-10 양진호 커밋33 미리듣기 CSS 수정 메인 페이지에서 윤종신 - 좋니 미리듣기 설정 DB 컬럼 변경에 따른 서블릿의 변수출처 변경

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -943,16 +943,23 @@ img {
 	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause:hover,
 	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause {
 	background: #d6d6d6;
+	/*
 	margin: 0 auto;
-	margin-top: -550px;
-	opacity: 0.5; 
+	margin-top: -430px;
+	*/
+	position: absolute;
+	top: 65px;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	opacity: 0.8; 
 	}
 	.single-album-area .audioplayer:not(.audioplayer-playing) .audioplayer-playpause a {
 	border-left: 12px solid #fff}
 	.single-album-area .audioplayer-time,
 	.single-album-area .audioplayer-volume,
 	.single-album-area .audioplayer-bar {
-	display: none }
+	display: none;
+	}
 	
  /*실험2 END*/	
 	
