--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -807,7 +807,8 @@ img {
 
 .browse-by-catagories {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  }
   .browse-by-catagories a {
     display: inline-block;
     background-color: #f4f4f4;
