--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1419,7 +1419,106 @@ img {
     .login-content .form-control:focus {
       box-shadow: none; 
       }
-	      
+	/*리뷰 페이지 area*/
+	#myform fieldset{
+    display: inline-block;
+    direction: rtl;
+    border:0;
+	}
+	#myform fieldset legend{
+    text-align: right;
+	}
+	#myform input[type=radio]{
+    display: none;
+	}
+	#myform label{
+    font-size: 3em;
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
+	}
+	#myform label:hover{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+	}
+	#myform label:hover ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+	}
+	#myform input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+	}
+	#reviewContents {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: solid 1.5px #D3D3D3;
+    border-radius: 5px;
+    font-size: 16px;
+    resize: none;
+	}
+	.btn-primary {
+  	background-color: #fff;
+  	-webkit-transition-duration: 500ms;
+  	transition-duration: 500ms;
+  	position: relative;
+  	z-index: 1;
+ 	 display: inline-block;
+  	min-width: 212px;
+  	height: 49px;
+ 	 color: #000;
+  	border: 1px solid #000;
+  	border-radius: 0;
+  	padding: 0 30px;
+  	font-size: 16px;
+  	line-height: 47px;
+  	font-weight: 700;
+  	text-transform: capitalize;
+  	margin-left: 220px; 
+  	}
+  	.writeReview{
+  	margin-left: 250px;
+  	}
+  	.starReview{
+  	width: 250px;
+  	height: 80px;
+  	margin-left: 210px;
+  	}
+  	/*
+  	.writeReview .writearea{
+  	position: relative;
+  	z-index: 1;
+  	margin-left: 115px;	 
+  	}
+  	*/
+  	.writeReview textarea{
+  	height: 200px;
+  	width: 500px;
+  	border-color: white;
+  	border-radius: 5px;
+  	vertical-align: middle;
+  	resize:none;
+  	margin-left: 70px;
+  	background-color: transparent;
+  	color: gray;
+  	}
+  	.section-write-heading {
+  	position: relative;
+ 	z-index: 1;
+ 	text-align: center;
+ 	margin-top: 10px;  
+ 	}
+  	.section-write-heading p {
+   	color: #5f5f5f;
+   	font-size: 14px;
+   	margin-bottom: 5px; }
+  	.section-write-heading h2 {
+   	font-size: 18px;
+   	text-transform: uppercase;
+    letter-spacing: 10px;
+   	margin-bottom: 0; 
+   	color: white;
+   	margin-left: 10px;
+   	}  
+		      
 /* :: upload area CSS*/
   	.upload-container{
   	width: 50%;
