--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -891,6 +891,32 @@ img {
     .no-album .no-info p {
       margin-bottom: 0; }
 
+.cart-item {
+	position: relative;
+  	z-index: 1;
+  	margin-bottom: 30px;
+}
+
+input[type="checkbox"].cart-item-checked{
+        display: none;
+      }
+input[type="checkbox"].cart-item-checked + label{
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        border:3px solid #707070;
+        position: relative;
+      }
+input[type="checkbox"].cart-item-checked:checked + label::after{
+        content:'\2714 \fe0e';
+        font-size: 25px;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        top:0;
+      }
 
 .single-album-area {
   position: relative;
