장바구니 페이지 음원 선택 삭제 기능 구현

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -679,6 +679,12 @@ img {
 	position: relative;
 	z-index: 1; 
 	}
+	.oneMusic-cart-area.has-fluid {
+	padding-left: 10%;
+	padding-right: 10%;
+	position: relative;
+	z-index: 1; 
+	}
 /* :: 7.0 Events Area CSS */
 .single-event-area {
   position: relative;
