2023-08-29 양진호 커밋 57 리뷰 작성 시, 앨범명 대신 음원명으로 등록할 수 있도록 <select>문 추가 변경 리뷰 페이지에서 앨범명 대신 음원명이 나올 수 있도록 수정

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1391,6 +1391,12 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
   	font-size: 16px; 
   	border-radius: 8px; 
 	}
+	.member-manage-form tr{
+	border: 1px solid #d8d8d8;
+	}
+	.member-manage-form td{
+	border: 1px solid #d8d8d8;
+	}
 	.artist-music-manage {
 	overflow: auto;
 	}
@@ -1555,6 +1561,14 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
   	width: 250px;
   	height: 80px;
   	margin-left: 210px;
+  	}
+  	.starReview .song_name {
+  	margin-left:36px;
+  	text-align: center;
+  	width: 150px;
+  	border-radius: 5px;
+  	margin-top: 5px;
+  	padding-bottom: -5px;
   	}
   	/*
   	.writeReview .writearea{
@@ -1804,7 +1818,7 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
  	 padding: 50px 30px;
  	 box-shadow: 0 2px 70px 0 rgba(0, 0, 0, 0.15);
  	 text-align: center;
- 	 width: 140%; 
+ 	 width: 160%; 
   	}
   	.music-list-form{
   	overflow: auto;
