2023-08-31 양진호 커밋59 큰 모니터에 적용될 수 있는 CSS 작성 및 리뷰 페이지에 있는 일부 페이지 링크 변경

--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -692,9 +692,17 @@ img {
  	border: 1px solid #d8d8d8;
  	margin-bottom: 100px;
 	}
-	.container-fluid{
+	.oneMusic-buy-now-area .container-fluid{
+	padding-right: 150px;
+	}  
+	@media only screen and (min-width: 1537px){
+		.oneMusic-buy-now-area .container-fluid{
+		padding-right: 250px;
+		} 	
+		
+  	}
+  
 	
-	}
 	.align-self-center h5{
 	margin-left: 100px;
 	width: 100px;
@@ -922,12 +930,22 @@ img {
   			width: 3000px;
 		}
 	 	.cart-item .song-play-area{
+			background-color: #000000;
+			width: 1000px;
+		}
+		.cart-item .album-info{
 			margin-right: 100px;
-			margin-top: -50px;
 		}
-		.cart-item .song-play-area audio{
+		.cart-item .album-thumb{
+			margin-right: 100px;
+		}
+		.align-content-around .cart-item{
+		margin-left: 250px;
+		}
+		.oneMusic-cart-area .container-fluid .align-content-around .align-self-center .btn-outline-danger{
+		margin-left: 215px;
+		}
 		
-		}
 	}
 	.cart-item {
 		position: relative;
@@ -1506,7 +1524,16 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
 	text-align: center;
 	margin-left: -1550px;
 	padding-left: 1500px;
-  	} 	
+  	}
+  	@media only screen and (min-width: 1537px){
+  		.music-container{
+  			width: 1950px;
+			text-align: center;
+			margin-left: 100px;
+			padding-left: 100px;
+  		}
+  	}
+  	 	
 	.member-manage-form th td{
 	padding: 15px; 
 	}  	
@@ -1525,6 +1552,23 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
 	float : left;
 	min-height : 200px;
 	border-radius: 8px;
+	}
+	.admin-category .side-menu{
+	padding: 20px 20px;
+	}
+	@media only screen and (min-width: 1537px){
+		.admin-category{
+			text-align : center;
+		 	background-color: #f5f9fa;
+			border: 1px solid #d8d8d8;
+			margin-top : 100px;
+			margin-left : 250px;
+			width : 10%;
+			float : left;
+			min-height : 200px;
+			border-radius: 8px;
+		}	
+	
 	}      
 /* :: 12.0 Login Area CSS */
 .login-content {
@@ -1956,9 +2000,11 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
 	.footer-area {
   	position: relative;
   	z-index: 1;
-  	background-color: rgb(111,167,235);
-  	margin-top: 300px;
-  	padding: 30px 0; }  
+  	background-color: #000000;
+  	margin-top: 350px;
+  	padding: 50px 0; 
+  	height: 250px;
+  	}
   }
   @media only screen and (max-width: 767px) {
     .footer-area {
