--- a/MusicShop/src/main/webapp/style.css
+++ b/MusicShop/src/main/webapp/style.css
@@ -1926,6 +1926,10 @@ input[type="checkbox"].cart-item-checked:checked + label.check-emoticon::after{
   	.info{
   	background-color: #f5f9fa;
   	}
+  	.album-body{
+  	background-color: #f5f9fa;
+  	padding-bottom: 100px;
+  	}
   	/*::Album Information Area End::*/
 /* :: upload area CSS*/
 	/*monitor size is over 1536px*/
